#
# Copyright (C) 2015 Alon Bar-Lev <alon.barlev@gmail.com>
# SPDX-License-Identifier: GPL-3.0+
#
MAINTAINERCLEANFILES= $(srcdir)/Makefile.in

dist_charts_SCRIPTS = \
	$(NULL)

dist_charts_DATA = \
	README.md \
	ap.chart.sh \
	apcupsd.chart.sh \
	apache.chart.sh \
	cpu_apps.chart.sh \
	cpufreq.chart.sh \
	example.chart.sh \
	exim.chart.sh \
	hddtemp.chart.sh \
	libreswan.chart.sh \
	load_average.chart.sh \
	mem_apps.chart.sh \
	mysql.chart.sh \
	nginx.chart.sh \
	nut.chart.sh \
	opensips.chart.sh \
	phpfpm.chart.sh \
	postfix.chart.sh \
	sensors.chart.sh \
	squid.chart.sh \
	tomcat.chart.sh \
	$(NULL)
