# SPDX-License-Identifier: GPL-3.0-or-later

MAINTAINERCLEANFILES= $(srcdir)/Makefile.in

dist_noinst_DATA = \
    config.puml \
    registry.puml \
    netdata-for-ephemeral-nodes.xml \
    netdata-proxies-example.xml \
    netdata-overview.xml \
    data_structures/netdata_config.svg \
    data_structures/README.md \
    data_structures/registry.svg \
    data_structures/rrd.svg \
    data_structures/web.svg \
    data_structures/src/netdata_config.xml \
    data_structures/src/registry.xml \
    data_structures/src/rrd.xml \
    data_structures/src/web.xml \
    $(NULL)

dist_noinst_SCRIPTS = \
    build.sh \
    $(NULL)
